# ftrace-energy

./: .gitignore  README.md  pyproject.toml
ftrace_energy/: __init__.py  ftrace.sh  ftrace_energy.py  gettime.cpp  models.json
tests/: test_ftrace_energy.py
